# RCNUMPY

./: .gitignore  CHANGELOG.md  README.md  __init__.py  pyproject.toml  setup.py
.github/workflows/: publish.yml
RNUMPY/: __init__.py  _basearrays.py  src.py
RNUMPY/linalg/: src.py
RNUMPY/scipy/: __init__.py  fft.py  integrate.py  interpolate.py  linalg.py  optimize.py  signal.py  special.py  src.py
RNUMPY/scipy/spacial/: transform.py
RNUMPY/scipy/sparse/: linalg.py
