[build-system]
requires = ["setuptools", "wheel","numpy","scipy"]
build-backend = "setuptools.build_meta"

[project]
name = 'RNUMPY'
version = "0.0.1"
description = 'Research Numpy: run either JAX or standard Numpy from a common interface'
readme = "README.md"
dependencies = ['numpy','scipy']
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache 2 License",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
]


[project.urls]
Homepage = "https://github.com/RCAIDE/RNUMPY"
Issues = "https://github.com/RCAIDE/RNUMPY/issues"

