[build-system]
requires = ["setuptools", "wheel","numpy","scipy"]
build-backend = "setuptools.build_meta"

[project]
name = 'RNUMPY'
version = "0.1.0"
description = 'Research Numpy: run either JAX or standard Numpy from a common interface'
authors = ["Aerospace Research Community Team"]
readme = "README.md"
python_requires='>=3.10'
dependencies = ['numpy','scipy']
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache 2 License",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
]
license = "Apache-2.0"
maintainers = ["The Developers"]
dynamic = ["requires-python", "license", "authors", "maintainers"]



[project.urls]
Homepage = "https://github.com/RCAIDE/RNUMPY"
Issues = "https://github.com/RCAIDE/RNUMPY/issues"

